# yaps-1.0

./: README.md  isobuilder.sh  yantra-build-steps  yantra-build-steps.md
yaps/: .gitignore  Cargo.toml  Makefile  meson.build  yaps.mirror  yaps.package  yaps.sh
yaps/src/: args.rs  constants.rs  main.rs  meson.build  structs.rs  ybuild.yaml
yaps/src/commands/: compile.rs  depends.rs  info.rs  install.rs  list.rs  remove.rs  update.rs  upgrade.rs
yaps/src/functions/: get_arch.rs  get_deps.rs  is_installed.rs  list_depends.rs  read_input.rs  run_tar.rs  y_builder.rs  y_compiler.rs  y_downloader.rs  y_info.rs  y_installer.rs  yy_build_path.rs
ybuild/: 01-toolchain.sh  02-system.sh  03-makeiso.sh  check.sh  yaps.build.conf
ybuild/files/: grub.cfg  livecd.hook
ybuild/system/01-sysconfig/: ybuild
ybuild/system/02-strip/: ybuild
ybuild/system/03-clean/: ybuild
ybuild/system/Python/: ybuild
ybuild/system/XML-Parser/: ybuild
ybuild/system/acl/: ybuild
ybuild/system/attr/: ybuild
ybuild/system/autoconf/: ybuild
ybuild/system/automake/: ybuild
ybuild/system/bash/: ybuild
ybuild/system/bc/: ybuild
ybuild/system/binutils/: ybuild
ybuild/system/bison/: ybuild
ybuild/system/blfs-bootscripts/: ybuild
ybuild/system/bzip2/: ybuild
ybuild/system/ca-certificates/: ybuild
ybuild/system/check/: ybuild
ybuild/system/coreutils/: ybuild
ybuild/system/curl/: ybuild
ybuild/system/dbus/: ybuild
ybuild/system/dejagnu/: ybuild
ybuild/system/dhcpcd/: install  ybuild
ybuild/system/diffutils/: ybuild
ybuild/system/dosfstools/: ybuild
(+135 files in other folders)
